# wind-power-cannibalization

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  DATA.md  LICENSE  Makefile  QUICKSTART.md  README.md  WORKFLOW.md  config.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml  reproducibility_issue.yml
.github/workflows/: citation-validation.yml  code-quality.yml
figures/: figure6.py  figure7.py
scripts/: __init__.py  calculate_value_factor.py  compute_capture_price_zonal.py  compute_value_factor_zonal.py  extract_regions.py
scripts-computations/: calculate_capture_price.py  wind_power_from_speed.py
scripts-figures/: figure2.py  figure3.py  figure4.py  figure5.py
scripts/computations/: __init__.py  calculate_capture_price.py  calculate_value_factor.py  extract_regions.py  wind_power_from_speed.py
scripts/visualization/: Figure3  __init__.py  figure2.py  figure4.py  figure5.py  figure7.py  figureS1.py
tests/: __init__.py  conftest.py  test_config.py  test_data_processing.py  test_visualization.py
