[project]
name = "wind-power-cannibalization"
version = "1.0.0"
description = "Analysis of wind power cannibalization effects in European electricity markets"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "FirstName LastName", email = "firstname.lastname@institution.edu"}
]
keywords = [
    "wind power",
    "cannibalization",
    "electricity markets",
    "renewable energy",
    "value factor",
    "capture price"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "xarray>=2024.1.0,<2025.0.0",
    "scipy>=1.14.0,<2.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "geopandas>=1.0.0,<2.0.0",
    "rioxarray>=0.17.0,<1.0.0",
    "shapely>=2.0.0,<3.0.0",
    "matplotlib>=3.9.0,<4.0.0",
    "cartopy>=0.23.0,<1.0.0",
    "netCDF4>=1.7.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Repository = "https://github.com/amna2123/wind-power-cannibalization"
Documentation = "https://github.com/amna2123/wind-power-cannibalization/blob/main/README.md"
"Bug Tracker" = "https://github.com/amna2123/wind-power-cannibalization/issues"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=. --cov-report=term-missing"
